--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>main</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
 
@@ -28,7 +28,7 @@
         </div> -->
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/bg01.jpg" alt="" />
+            <img src="./assets/img/bg01.jpg" alt="" />
           </div>
           <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 28.87%; width: 20%">
             <div class="img--block">
