--- a/index.html
+++ b/index.html
@@ -32,70 +32,70 @@
           </div>
           <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 28.87%; width: 20%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec1_ball_01.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_01.png" alt="" />
             </div>
           </div>
           <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 51%; width: 20%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec1_ball_02.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_02.png" alt="" />
             </div>
           </div>
           <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 73.3%; width: 20%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec1_ball_03.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_03.png" alt="" />
             </div>
           </div>
 
           <a class="link-pin" href="#link1" aria-label="ball01" style="top: 22%; height: 7%; left: 8%; width: 16%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec1_ball_04.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_04.png" alt="" />
             </div>
           </a>
           <!-- sec1 menu -->
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
             <div class="img--block">
-              <img src="/assets/img/deco/menu1.png" alt="" />
+              <img src="./assets/img/deco/menu1.png" alt="" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
             <div class="img--block">
-              <img src="/assets/img/deco/menu2.png" alt="" />
+              <img src="./assets/img/deco/menu2.png" alt="" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
             <div class="img--block">
-              <img src="/assets/img/deco/menu3.png" alt="" />
+              <img src="./assets/img/deco/menu3.png" alt="" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
             <div class="img--block">
-              <img src="/assets/img/deco/menu4.png" alt="" />
+              <img src="./assets/img/deco/menu4.png" alt="" />
             </div>
           </a>
           <!-- about gif -->
           <a class="link-pin" href="#link1" aria-label="" style="top: 42%; height: 8%; left: 50%; width: 40%">
             <div class="img--block">
-              <img src="/assets/img/deco/img-about.gif" alt="" />
+              <img src="./assets/img/deco/img-about.gif" alt="" />
             </div>
           </a>
         </section>
         <section class="sec2">
           <div class="img--block">
-            <img src="/assets/img/bg2.jpg" alt="" />
+            <img src="./assets/img/bg2.jpg" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="" style="top: 0%; height: 60%; left: 50%; width: 100%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec2_deco_02.gif" alt="" />
+              <img src="./assets/img/deco/sec2_deco_02.gif" alt="" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="" style="top: 0%; height: 8%; left: 50%; width: 25%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec2_deco_01.png" alt="" />
+              <img src="./assets/img/deco/sec2_deco_01.png" alt="" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="ball02" style="top: 44%; height: 8%; left: 87%; width: 19%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec2_ball_01.png" alt="" />
+              <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
             </div>
           </a>
         </section>
@@ -103,7 +103,7 @@
         <!-- 9zone -->
         <section class="sec3">
           <div class="img--block">
-            <img src="/assets/img/bg3.jpg" alt="" />
+            <img src="./assets/img/bg3.jpg" alt="" />
           </div>
           <div class="link-pin" style="top: 20%; height: 40%; left: 50%; width: 70%">
             <div class="swiper">
@@ -176,11 +176,11 @@
         <!-- playground jung-gu -->
         <section class="sec4">
           <div class="img--block">
-            <img src="/assets/img/bg4.jpg" alt="" />
+            <img src="./assets/img/bg4.jpg" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="" style="top: 0%; height: 20%; left: 50%; width: 45.4%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec4_deco_01.gif" alt="" />
+              <img src="./assets/img/deco/sec4_deco_01.gif" alt="" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="" style="top: 22.3%; height: 18.4%; left: 27.3%; width: 26%">
@@ -192,7 +192,7 @@
         </section>
         <section class="sec5">
           <div class="img--block">
-            <img src="/assets/img/bg5.jpg" alt="" />
+            <img src="./assets/img/bg5.jpg" alt="" />
           </div>
           <div class="link-pin" href="#link1" aria-label="" style="top: 18.5%; height: 31%; left: 50%; width: 56%">
             <div class="swiper">
@@ -200,21 +200,21 @@
                 <div class="swiper-slide">
                   <a href="#">
                     <div class="img--block">
-                      <img src="/assets/img/slide-1.png" alt="" />
+                      <img src="./assets/img/slide-1.png" alt="" />
                     </div>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="#">
                     <div class="img--block">
-                      <img src="/assets/img/slide-1.png" alt="" />
+                      <img src="./assets/img/slide-1.png" alt="" />
                     </div>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="#">
                     <div class="img--block">
-                      <img src="/assets/img/slide-1.png" alt="" />
+                      <img src="./assets/img/slide-1.png" alt="" />
                     </div>
                   </a>
                 </div>
@@ -229,13 +229,13 @@
           </div>
           <a class="link-pin" href="#link1" aria-label="ball03" style="top: 40%; height: 8%; left: 94%; width: 19%">
             <div class="img--block">
-              <img src="/assets/img/deco/sec2_ball_01.png" alt="" />
+              <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
             </div>
           </a>
         </section>
         <section class="sec6">
           <div class="img--block">
-            <img src="/assets/img/bg6.jpg" alt="" />
+            <img src="./assets/img/bg6.jpg" alt="" />
           </div>
         </section>
       </div>
