--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/fonts.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
 
@@ -105,61 +106,70 @@
           <div class="img--block">
             <img src="./assets/img/bg3.jpg" alt="" />
           </div>
-          <div class="link-pin" style="top: 20%; height: 40%; left: 50%; width: 70%">
+          <div class="link-pin" style="top: 20%; height: 45%; left: 50%; width: 70%">
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <a href="zone1.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">장충동</h3>
+                    <p class="desc">우리가 몰랐던 리얼 <span>장충</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone2.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">필동</h3>
+                    <p class="desc"><span>필</span>름처럼 새겨지는 감성<span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone3.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">을지로</h3>
+                    <p class="desc">옛것<span>을</span> <span>지</span>금으<span>로</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone4.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">회현동</h3>
+                    <p class="desc">기<span>회</span>를 <span>현</span>재로 일구어낸 동네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone5.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">신당동</h3>
+                    <p class="desc"><span>신</span>묘하게 힙하<span>당</span> 힙당동</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone6.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">소공동</h3>
+                    <p class="desc">서울<span>소</span>울 피어나는 성<span>공</span>로드</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone7.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">명동</h3>
+                    <p class="desc"><span>명</span>성답게 빛나는 <span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone8.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">중림동</h3>
+                    <p class="desc">소<span>중</span>히 마음에 담는 그<span>림</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone9.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
-                    <div class="txt--block">중구 지역</div>
+                    <h3 class="title">광희동</h3>
+                    <p class="desc">세계가 열<span>광</span>하는 환<span>희</span>의 빛</p>
                   </a>
                 </div>
               </div>
