--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
               </div>
               <!-- <div class="swiper-pagination"></div> -->
 
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev btn prev"></div>
+              <div class="swiper-button-next btn next"></div>
 
               <!-- <div class="swiper-scrollbar"></div> -->
             </div>
@@ -310,7 +310,7 @@
             // 575px 이하 → 1개씩
             0: {
               slidesPerView: 1.5,
-              spaceBetween: 10,
+              spaceBetween: 5,
               enabled: true,
               centeredSlides: true,
             },
