--- a/zone1.html
+++ b/zone1.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>합당동</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/zone.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
   </head>
   <body>
     <main>
       <div class="wrapper">
-        <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div>
-
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone1_img/sec1_main_img.png" alt="" />
+            <img src="./assets/img/zone1_img/sec1_main_img.png" alt="" />
           </div>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
-        <div class="sec2">
+        <section class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone1_img/sec2_img01.png" alt="" />
+            <img src="./assets/img/zone1_img/sec2_img01.png" alt="" />
           </div>
 
           <div class="sec2-main--content">
@@ -34,9 +31,9 @@
           <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 68%; height: 12%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 76%; height: 12%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
-        </div>
+        </section>
 
-        <div class="sec3">
+        <section class="sec3">
           <div class="img--block">
             <img src="/assets/img/zone1_img/sec3_main_img.png" alt="" />
           </div>
@@ -45,9 +42,9 @@
           <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 66%; height: 12%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
-        </div>
+        </section>
 
-        <div class="sec4">
+        <section class="sec4">
           <div class="img--block">
             <img src="assets/img/zone1_img/sec4_main_img.png" alt="" />
           </div>
@@ -57,8 +54,8 @@
           <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 74%; height: 12%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 6" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
-        </div>
-        <div class="sec5">
+        </section>
+        <section class="sec5">
           <div class="img--block">
             <img src="assets/img/zone1_img/sec5_main_img.png" alt="" />
           </div>
@@ -67,8 +64,8 @@
           <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 66%; height: 12%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
-        </div>
-        <div class="sec6">
+        </section>
+        <section class="sec6">
           <div class="img--block">
             <img src="assets/img/zone1_img/sec6_main_img.png" alt="" />
           </div>
@@ -79,7 +76,7 @@
           <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 78%; height: 12%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 78%; height: 13%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="링크 6" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
-        </div>
+        </section>
         <div class="close--btn">
           <div class="img--block">
             <img src="assets/img/zone1_img/close_img.png" alt="" />
