--- a/zone4.html
+++ b/zone4.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>명동</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
   </head>
   <body>
     <main>
       <div class="wrapper">
-        <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div>
-
         <section class="sec1">
           <div class="img--block">
             <img src="/assets/img/zone4_img/sec1_main_img.png" alt="" />
           </div>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
@@ -27,7 +24,7 @@
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone4_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec2_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="바프 아몬드 스토어 명동" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="위글위글집명동" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
@@ -37,15 +34,10 @@
           <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
-        <!-- <div class="sec3">
+
+        <div class="sec3">
           <div class="img--block">
             <img src="/assets/img/zone4_img/sec3_main_img.png" alt="" />
-          </div>
-        </div> -->
-
-        <div class="sec4">
-          <div class="img--block">
-            <img src="assets/img/zone4_img/sec4_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="명동아트브리즈" style="top: 47%; height: 12%; left: 28%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="진사댁 명동" style="top: 47%; height: 12%; left: 71%; width: 37%"> </a>
@@ -54,18 +46,18 @@
           <a class="link-pin" href="#link1" aria-label="뷰티플레이" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
-        <div class="sec5">
+        <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone4_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec4_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="펜카페" style="top: 46.6%; height: 12%; left: 66%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="램캠프" style="top: 61%; height: 12%; left: 27%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="사유의서재 남산 와인다이닝" style="top: 74%; height: 14%; left: 66%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
-        <div class="sec6">
+        <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone4_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec5_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="신세계백화점 본점" style="top: 48%; height: 13%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="더 스팟 패뷸러스" style="top: 58%; height: 12%; left: 70%; width: 37%"> </a>
@@ -75,7 +67,7 @@
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone4_img/close_img.png" alt="" />
+            <img src="/assets/img/zone4_img/close_img.png" alt="" />
           </div>
           <a class="link-pin close--link" href="#link1" aria-label="딛기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
