--- a/zone7.html
+++ b/zone7.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>장충동</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
   </head>
   <body>
     <main>
       <div class="wrapper">
-        <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div>
-
         <section class="sec1">
           <div class="img--block">
             <img src="/assets/img/zone7_img/sec1_main_img.png" alt="" />
           </div>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
