--- a/zone8.html
+++ b/zone8.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회현동</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
   </head>
   <body>
     <main>
       <div class="wrapper">
-        <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div>
-
         <section class="sec1">
           <div class="img--block">
             <img src="/assets/img/zone8_img/sec1_main_img.png" alt="" />
           </div>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
@@ -61,7 +58,7 @@
           <a class="link-pin" href="#link1" aria-label="안중근의사 유목" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
-        <div class="sec5"> 
+        <div class="sec5">
           <div class="img--block">
             <img src="assets/img/zone8_img/sec5_main_img.png" alt="" />
           </div>
@@ -91,7 +88,6 @@
           <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
-
     </main>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
