--- a/zone2.html
+++ b/zone2.html
@@ -11,14 +11,12 @@
   <body>
     <main>
       <div class="wrapper">
-        <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div>
 
         <section class="sec1">
           <div class="img--block">
             <img src="/assets/img/zone2_img/sec1_main_img.png" alt="" />
           </div>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
