--- a/zone3.html
+++ b/zone3.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>중림동</title>
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
   </head>
   <body>
     <main>
       <div class="wrapper">
-        <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div>
-
         <section class="sec1">
           <div class="img--block">
             <img src="/assets/img/zone3_img/sec1_main_img.png" alt="" />
           </div>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
@@ -50,7 +47,7 @@
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone3_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec4_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="이조식당" style="top: 47%; height: 12%; left: 28%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="중림재" style="top: 47%; height: 12%; left: 71%; width: 37%"> </a>
@@ -61,7 +58,7 @@
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone3_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec5_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="칠패시장 터" style="top: 46%; height: 13%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="염천교수제화거리" style="top: 55%; height: 12%; left: 70%; width: 37%"> </a>
@@ -71,7 +68,7 @@
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone3_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec6_main_img.png" alt="" />
           </div>
           <a class="link-pin" href="#link1" aria-label="중임동 약현성당" style="top: 48.8%; height: 13%; left: 29%; width: 37%"> </a>
           <a class="link-pin" href="#link1" aria-label="고산자 김정호 집터" style="top: 57%; height: 13%; left: 70%; width: 37%"> </a>
@@ -81,7 +78,7 @@
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone3_img/close_img.png" alt="" />
+            <img src="/assets/img/zone3_img/close_img.png" alt="" />
           </div>
           <a class="link-pin close--link" href="#link1" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
