--- a/index.html
+++ b/index.html
@@ -24,81 +24,82 @@
   <body>
     <main>
       <div class="wrapper">
-        <!-- <div class="close_ic">
-          <img src="/assets/icon/close.svg" alt="" />
-        </div> -->
         <section class="sec1">
           <div class="img--block">
-            <img src="./assets/img/bg01.jpg" alt="" />
+            <img src="./assets/img/bg01.jpg" alt="sec1_bg" />
           </div>
-          <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 28.87%; width: 20%">
+          <div class="link-pin" aria-label="ball" style="top: 2%; height: 10%; left: 28.87%; width: 20%">
             <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_01.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_01.png" alt="풍선" />
             </div>
           </div>
-          <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 51%; width: 20%">
+          <div class="link-pin" aria-label="ball" style="top: 2%; height: 10%; left: 51%; width: 20%">
             <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_02.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_02.png" alt="풍선" />
             </div>
           </div>
-          <div class="link-pin" href="#link1" aria-label="ball" style="top: 2%; height: 10%; left: 73.3%; width: 20%">
+          <div class="link-pin" aria-label="ball" style="top: 2%; height: 10%; left: 73.3%; width: 20%">
             <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_03.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_03.png" alt="풍선" />
             </div>
           </div>
 
-          <a class="link-pin" href="#link1" aria-label="ball01" style="top: 22%; height: 7%; left: 8%; width: 16%">
+          <div class="link-pin" aria-label="ball01" style="top: 22%; height: 7%; left: 8%; width: 16%">
             <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_04.png" alt="" />
+              <img src="./assets/img/deco/sec1_ball_04.png" alt="풍선" />
             </div>
-          </a>
+          </div>
           <!-- sec1 menu -->
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
             <div class="img--block">
-              <img src="./assets/img/deco/menu1.png" alt="" />
+              <img src="./assets/img/deco/menu1.png" alt="About" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
             <div class="img--block">
-              <img src="./assets/img/deco/menu2.png" alt="" />
+              <img src="./assets/img/deco/menu2.png" alt="홍보 영상" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
             <div class="img--block">
-              <img src="./assets/img/deco/menu3.png" alt="" />
+              <img src="./assets/img/deco/menu3.png" alt="9 Zone" />
             </div>
           </a>
           <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
             <div class="img--block">
-              <img src="./assets/img/deco/menu4.png" alt="" />
+              <img src="./assets/img/deco/menu4.png" alt="Event" />
             </div>
           </a>
           <!-- about gif -->
-          <a class="link-pin" href="#link1" aria-label="" style="top: 42%; height: 8%; left: 50%; width: 40%">
+          <div class="link-pin" aria-label="" style="top: 42%; height: 8%; left: 50%; width: 40%">
             <div class="img--block">
-              <img src="./assets/img/deco/img-about.gif" alt="" />
+              <img src="./assets/img/deco/img-about.gif" alt="about.gif" />
             </div>
-          </a>
+          </div>
         </section>
+
+        <!-- 홍보 영상 -->
         <section class="sec2">
           <div class="img--block">
             <img src="./assets/img/bg2.jpg" alt="" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="" style="top: 0%; height: 60%; left: 50%; width: 100%">
+          <div class="link-pin" aria-label="" style="top: 0%; height: 60%; left: 50%; width: 100%">
             <div class="img--block">
               <img src="./assets/img/deco/sec2_deco_02.gif" alt="" />
             </div>
-          </a>
-          <a class="link-pin" href="#link1" aria-label="" style="top: 0%; height: 8%; left: 50%; width: 25%">
+          </div>
+          <div class="link-pin" aria-label="" style="top: 0%; height: 8%; left: 50%; width: 25%">
             <div class="img--block">
               <img src="./assets/img/deco/sec2_deco_01.png" alt="" />
             </div>
-          </a>
-          <a class="link-pin" href="#link1" aria-label="ball02" style="top: 44%; height: 8%; left: 87%; width: 19%">
+          </div>
+          <div class="link-pin" aria-label="ball02" style="top: 44%; height: 8%; left: 87%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
             </div>
-          </a>
+          </div>
+          <a class="link-pin" href="#link1" style="top: 7.9%; height: 16.5%; left: 50%; width: 51%"> </a>
+          <a class="link-pin" href="#link1" style="top: 27.7%; height: 16.5%; left: 50%; width: 51%"> </a>
         </section>
 
         <!-- 9zone -->
@@ -106,39 +107,49 @@
           <div class="img--block">
             <img src="./assets/img/bg3.jpg" alt="" />
           </div>
+          <div class="link-pin" aria-label="ball04" style="top: 11%; height: 14%; left: 7%; width: 18%; z-index: 5">
+            <div class="img--block">
+              <img src="./assets/img/deco/sec1_ball_04.png" alt="" />
+            </div>
+          </div>
+          <div class="link-pin" aria-label="ball05" style="top: 40%; height: 13%; left: 92%; width: 16%; z-index: 5">
+            <div class="img--block">
+              <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
+            </div>
+          </div>
           <div class="link-pin" style="top: 20%; height: 45%; left: 50%; width: 70%">
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <a href="zone1.html" target="_blank" class="swiper--link">
+                  <a href="zone7.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">장충동</h3>
                     <p class="desc">우리가 몰랐던 리얼 <span>장충</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone2.html" target="_blank" class="swiper--link">
+                  <a href="zone5.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">필동</h3>
                     <p class="desc"><span>필</span>름처럼 새겨지는 감성<span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone3.html" target="_blank" class="swiper--link">
+                  <a href="zone2.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">을지로</h3>
                     <p class="desc">옛것<span>을</span> <span>지</span>금으<span>로</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone4.html" target="_blank" class="swiper--link">
+                  <a href="zone8.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">회현동</h3>
                     <p class="desc">기<span>회</span>를 <span>현</span>재로 일구어낸 동네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone5.html" target="_blank" class="swiper--link">
+                  <a href="zone1.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">신당동</h3>
                     <p class="desc"><span>신</span>묘하게 힙하<span>당</span> 힙당동</p>
@@ -152,14 +163,14 @@
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone7.html" target="_blank" class="swiper--link">
+                  <a href="zone4.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">명동</h3>
                     <p class="desc"><span>명</span>성답게 빛나는 <span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone8.html" target="_blank" class="swiper--link">
+                  <a href="zone3.html" target="_blank" class="swiper--link">
                     <div class="img--block">img</div>
                     <h3 class="title">중림동</h3>
                     <p class="desc">소<span>중</span>히 마음에 담는 그<span>림</span></p>
@@ -208,21 +219,21 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <a href="#">
+                  <a href="#none">
                     <div class="img--block">
                       <img src="./assets/img/slide-1.png" alt="" />
                     </div>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="#">
+                  <a href="#none">
                     <div class="img--block">
                       <img src="./assets/img/slide-1.png" alt="" />
                     </div>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="#">
+                  <a href="#none">
                     <div class="img--block">
                       <img src="./assets/img/slide-1.png" alt="" />
                     </div>
@@ -231,11 +242,11 @@
               </div>
               <!-- <div class="swiper-pagination"></div> -->
 
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
-
+              
               <!-- <div class="swiper-scrollbar"></div> -->
             </div>
+            <div class="swiper-button-prev btn prev"></div>
+            <div class="swiper-button-next btn next"></div>
           </div>
           <a class="link-pin" href="#link1" aria-label="ball03" style="top: 40%; height: 8%; left: 94%; width: 19%">
             <div class="img--block">
