--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
             </div>
           </div>
           <!-- sec1 menu -->
-          <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
+          <a class="link-pin" href="#about" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu1.png" alt="About" />
             </div>
           </a>
-          <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
+          <a class="link-pin" href="#sec2" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu2.png" alt="홍보 영상" />
             </div>
           </a>
-          <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
+          <a class="link-pin" href="#sec3" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu3.png" alt="9 Zone" />
             </div>
           </a>
-          <a class="link-pin" href="#link1" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
+          <a class="link-pin" href="#sec4" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu4.png" alt="Event" />
             </div>
           </a>
           <!-- about gif -->
-          <div class="link-pin" aria-label="" style="top: 42%; height: 8%; left: 50%; width: 40%">
+          <div id="about" class="link-pin" aria-label="" style="top: 42%; height: 8%; left: 50%; width: 40%">
             <div class="img--block">
               <img src="./assets/img/deco/img-about.gif" alt="about.gif" />
             </div>
@@ -79,7 +79,7 @@
         </section>
 
         <!-- 홍보 영상 -->
-        <section class="sec2">
+        <section id="sec2" class="sec2">
           <div class="img--block">
             <img src="./assets/img/bg2.jpg" alt="" />
           </div>
@@ -103,7 +103,7 @@
         </section>
 
         <!-- 9zone -->
-        <section class="sec3">
+        <section id="sec3" class="sec3">
           <div class="img--block">
             <img src="./assets/img/bg3.jpg" alt="" />
           </div>
@@ -195,7 +195,7 @@
         </section>
 
         <!-- playground jung-gu -->
-        <section class="sec4">
+        <section id="sec4" class="sec4">
           <div class="img--block">
             <img src="./assets/img/bg4.jpg" alt="" />
           </div>
